[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Textures/Enemies/ProgressBarTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Zombie.gd" type="Script" id=3]
[ext_resource path="res://Textures/Enemies/Hitflash.gdshader" type="Shader" id=4]
[ext_resource path="res://Textures/Enemies/Small Zombie.png" type="Texture" id=5]
[ext_resource path="res://Scenes/HitEffect.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/hit_opacity = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 5.0111

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 6.16667, 9.16667 )

[node name="Zombie" type="KinematicBody2D" groups=["Enemy"]]
scale = Vector2( 3, 3 )
collision_layer = 16
collision_mask = 8
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 12 )
position = Vector2( 1, -0.999999 )
scale = Vector2( 1.125, 1.125 )
frames = SubResource( 10 )
animation = "Idle"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.666667, -1.33333 )
shape = SubResource( 11 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 64
knockbackResistance = 2
invincibilityTime = 0.3
hitEffect = ExtResource( 6 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.833333, -0.833333 )
shape = SubResource( 13 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -8.0
margin_top = -9.33333
margin_right = 19.0
margin_bottom = -7.33333
rect_scale = Vector2( 0.6, 1 )
theme = ExtResource( 2 )
value = 100.0
percent_visible = false

[node name="Tween" type="Tween" parent="ProgressBar"]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 5.0

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 250, 0 )
collision_mask = 9

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.333333, -0.333333 )

[node name="UpdateDistanceTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="UpdateDistanceTimer" to="." method="_on_UpdateDistanceTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="Hurtbox"]
